--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
      "name": "comment-headers",
      "displayName": "Comment headers",
-     "description": "",
+     "description": "comment headers snippets  ",
      "publisher": "akmarnafi",
      "version": "0.2.0",
      "engines": {
